--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
   </head>
 
   <body>
-    <main id="main">My ID is "main"!</main>
+    <main id="main">
+      <p id="p">I'm a p tag</p>
+    </main>
 
     <br />
 
     <div>
-      <label>Input:</label><input />
+      <label>Input:</label><input/>
     </div>
 
     <br />
@@ -37,5 +39,6 @@
         </div>
       </div>
     </div>
+    <script src="./index.js" type="application/javascript"></script>
   </body>
 </html>
