--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <title>Listening to Nodes</title>
     <style>
      div {
@@ -12,7 +13,8 @@
   </head>
 
   <body>
-    <main id="main">My ID is "main"!</main>
+    <main id="main">My ID is "main"!
+    <p>I'm some paragraph</p></main>
 
     <br />
 
@@ -37,5 +39,6 @@
         </div>
       </div>
     </div>
+        <script src = "./index.js" type="application/javascript"></script>
   </body>
 </html>
