--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   </head>
 
   <body>
-    <main id="main">My ID is "main"!</main>
-
+    <main id="main">My ID is "main"!
+      <p>I'm a p tag.</p>
+    </main>
+    
     <br />
 
     <div>
@@ -37,5 +39,6 @@
         </div>
       </div>
     </div>
+    <script src="index.js" type="application/javascript"></script>
   </body>
 </html>
